# dual-camera-recorder

./: CMakeLists.txt  camera.cpp  camera.hpp  camera.ui  graphicsview.cpp  graphicsview.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  res.qrc
